# sysmonitor

./: README.en.md  README.md  sysmonitor-kmod.spec
docs/en/: _toc.yaml  sysmonitor_user_guide.md
docs/zh/: _toc.yaml  sysmonitor_user_guide.md
sysmonitor-1.3.2/: CMakeLists.txt
sysmonitor-1.3.2/conf/: clock_transition  collect_fd_list  cpu  disk  file  io_monitor  iodelay  logind_monitor  memory  network  process_fd_conf  pscnt  signal  sys_fd_conf  sysmonitor  w_log_conf  zombie
sysmonitor-1.3.2/conf/logrotate.d/: sysmonitor-logrotate
sysmonitor-1.3.2/conf/process/: acpid  cron  dbus  irqbalance  libvirtd-monitor  sshd  syslog
sysmonitor-1.3.2/conf/rsyslog.d/: sysmonitor.conf
sysmonitor-1.3.2/module/: Makefile  fdstat.c  fdstat.h  monitor_netdev.c  monitor_netdev.h  signo_catch.c  signo_catch.h  sysmonitor_main.c  sysmonitor_main.h
sysmonitor-1.3.2/script/: check_cron.sh  check_dbus.sh  check_sshd.sh  check_syslog.sh  clean_remain_process.sh  clocktransition.py  get_local_disk.sh  getzombieparent.py  iomonitor_daemon  ko.sh  logind_clear.sh  process_clock_data.sh  rm_duplicat_conf.sh  sysmonitor_log_dump.sh
sysmonitor-1.3.2/service/: sysmonitor.service
sysmonitor-1.3.2/src/: CMakeLists.txt  common.c  common.h  custom.c  custom.h  disk.c  disk.h  filemonitor.c  filemonitor.h  fsmonitor.c  fsmonitor.h  monitor_thread.c  monitor_thread.h  process.c  process.h  sys_event.c  sys_event.h  sys_resources.c  sys_resources.h  sysmonitor.c  sysmonitor.h  zombie.c  zombie.h
sysmonitor-1.3.2/test/: CMakeLists.txt  llt.sh
sysmonitor-1.3.2/test/common/: CMakeLists.txt  common_llt.c  process_exit_test.c
sysmonitor-1.3.2/test/common_interface/: common_interface.c  common_interface.h
sysmonitor-1.3.2/test/custom/: CMakeLists.txt  custom_llt.c
sysmonitor-1.3.2/test/disk/: CMakeLists.txt  disk_llt.c
sysmonitor-1.3.2/test/filemonitor/: CMakeLists.txt  filemonitor_llt.c
sysmonitor-1.3.2/test/fs/: CMakeLists.txt  fs_llt.c
sysmonitor-1.3.2/test/fuzz/: CMakeLists.txt  fuzz.sh  sysmonitor_fuzz.c
sysmonitor-1.3.2/test/fuzz/corpus/: samples
sysmonitor-1.3.2/test/fuzz/dict/: sysmonitor_fuzz.dict
sysmonitor-1.3.2/test/process/: CMakeLists.txt  process_llt.c
sysmonitor-1.3.2/test/sys_event/: CMakeLists.txt  sys_event_fd.c  sys_event_llt.c
sysmonitor-1.3.2/test/sys_resources/: CMakeLists.txt  generate_fd.c  sys_resources_llt.c
sysmonitor-1.3.2/test/sysmonitor/: CMakeLists.txt  sysmonitor_llt.c
sysmonitor-1.3.2/test/zombie/: CMakeLists.txt  generate_zombie.c  zombie_llt.c
